// Vitest Snapshot v1

exports[`Fixtures > should match snapshot of fibonacci.asm 1`] = `
{
  "codeMemory": Set {
    8192,
    8193,
    8194,
    8195,
    8196,
    8197,
    8198,
    8199,
    8200,
    8201,
    8202,
    8203,
    8204,
    8205,
    8206,
    8207,
    8208,
    8209,
    8210,
    8211,
    8212,
    8213,
    8214,
    8215,
    8216,
    8217,
    8218,
    8219,
    8220,
    8221,
    8222,
    8223,
    8224,
    8225,
    8226,
    8227,
    8228,
    8229,
  },
  "constants": Map {
    "N" => 10,
  },
  "data": [
    {
      "initialValues": [
        1,
      ],
      "meta": {
        "length": 1,
        "start": 4096,
      },
      "size": "byte",
    },
  ],
  "instructions": [
    {
      "meta": {
        "length": 4,
        "position": [
          288,
          291,
        ],
        "start": 8192,
      },
      "opSize": "word",
      "out": {
        "register": "BX",
        "type": "register",
      },
      "src": {
        "type": "immediate",
        "value": 4097,
      },
      "type": "MOV",
    },
    {
      "meta": {
        "length": 3,
        "position": [
          321,
          324,
        ],
        "start": 8196,
      },
      "opSize": "byte",
      "out": {
        "register": "AL",
        "type": "register",
      },
      "src": {
        "type": "immediate",
        "value": 0,
      },
      "type": "MOV",
    },
    {
      "meta": {
        "length": 4,
        "position": [
          338,
          341,
        ],
        "start": 8199,
      },
      "opSize": "byte",
      "out": {
        "register": "AH",
        "type": "register",
      },
      "src": {
        "address": 4096,
        "mode": "direct",
        "type": "memory",
      },
      "type": "MOV",
    },
    {
      "meta": {
        "length": 4,
        "position": [
          361,
          364,
        ],
        "start": 8203,
      },
      "opSize": "word",
      "out": {
        "register": "BX",
        "type": "register",
      },
      "src": {
        "type": "immediate",
        "value": 4106,
      },
      "type": "CMP",
    },
    {
      "jumpTo": 8229,
      "meta": {
        "length": 3,
        "position": [
          394,
          397,
        ],
        "start": 8207,
      },
      "type": "JNS",
    },
    {
      "meta": {
        "length": 3,
        "position": [
          409,
          412,
        ],
        "start": 8210,
      },
      "opSize": "byte",
      "out": {
        "register": "CL",
        "type": "register",
      },
      "src": {
        "register": "AH",
        "type": "register",
      },
      "type": "MOV",
    },
    {
      "meta": {
        "length": 3,
        "position": [
          427,
          430,
        ],
        "start": 8213,
      },
      "opSize": "byte",
      "out": {
        "register": "CL",
        "type": "register",
      },
      "src": {
        "register": "AL",
        "type": "register",
      },
      "type": "ADD",
    },
    {
      "meta": {
        "length": 3,
        "position": [
          445,
          448,
        ],
        "start": 8216,
      },
      "opSize": "byte",
      "out": {
        "register": "AL",
        "type": "register",
      },
      "src": {
        "register": "AH",
        "type": "register",
      },
      "type": "MOV",
    },
    {
      "meta": {
        "length": 3,
        "position": [
          463,
          466,
        ],
        "start": 8219,
      },
      "opSize": "byte",
      "out": {
        "register": "AH",
        "type": "register",
      },
      "src": {
        "register": "CL",
        "type": "register",
      },
      "type": "MOV",
    },
    {
      "meta": {
        "length": 2,
        "position": [
          481,
          484,
        ],
        "start": 8222,
      },
      "opSize": "byte",
      "out": {
        "mode": "indirect",
        "type": "memory",
      },
      "src": {
        "register": "CL",
        "type": "register",
      },
      "type": "MOV",
    },
    {
      "meta": {
        "length": 2,
        "position": [
          501,
          504,
        ],
        "start": 8224,
      },
      "opSize": "word",
      "out": {
        "register": "BX",
        "type": "register",
      },
      "type": "INC",
    },
    {
      "jumpTo": 8203,
      "meta": {
        "length": 3,
        "position": [
          515,
          518,
        ],
        "start": 8226,
      },
      "type": "JMP",
    },
    {
      "meta": {
        "length": 1,
        "position": [
          532,
          535,
        ],
        "start": 8229,
      },
      "type": "HLT",
    },
  ],
  "success": true,
}
`;

exports[`Fixtures > should match snapshot of multiplicar.asm 1`] = `
{
  "codeMemory": Set {
    8192,
    8193,
    8194,
    8195,
    8196,
    8197,
    8198,
    8199,
    8200,
    8201,
    8202,
    8203,
    8204,
    8205,
    8206,
    8207,
    8208,
    8209,
    8210,
    8211,
    8212,
    8213,
    8214,
    8215,
    8216,
    8217,
    8218,
    8219,
    8220,
    8221,
  },
  "constants": Map {},
  "data": [
    {
      "initialValues": [
        25,
      ],
      "meta": {
        "length": 2,
        "start": 4096,
      },
      "size": "word",
    },
    {
      "initialValues": [
        4,
      ],
      "meta": {
        "length": 2,
        "start": 4098,
      },
      "size": "word",
    },
    {
      "initialValues": [
        null,
      ],
      "meta": {
        "length": 2,
        "start": 4100,
      },
      "size": "word",
    },
  ],
  "instructions": [
    {
      "meta": {
        "length": 4,
        "position": [
          111,
          114,
        ],
        "start": 8192,
      },
      "opSize": "word",
      "out": {
        "register": "AX",
        "type": "register",
      },
      "src": {
        "type": "immediate",
        "value": 0,
      },
      "type": "MOV",
    },
    {
      "meta": {
        "length": 4,
        "position": [
          132,
          135,
        ],
        "start": 8196,
      },
      "opSize": "word",
      "out": {
        "register": "BX",
        "type": "register",
      },
      "src": {
        "address": 4098,
        "mode": "direct",
        "type": "memory",
      },
      "type": "MOV",
    },
    {
      "meta": {
        "length": 4,
        "position": [
          153,
          156,
        ],
        "start": 8200,
      },
      "opSize": "word",
      "out": {
        "register": "BX",
        "type": "register",
      },
      "src": {
        "type": "immediate",
        "value": 0,
      },
      "type": "CMP",
    },
    {
      "jumpTo": 8217,
      "meta": {
        "length": 3,
        "position": [
          174,
          176,
        ],
        "start": 8204,
      },
      "type": "JZ",
    },
    {
      "meta": {
        "length": 4,
        "position": [
          192,
          195,
        ],
        "start": 8207,
      },
      "opSize": "word",
      "out": {
        "register": "AX",
        "type": "register",
      },
      "src": {
        "address": 4096,
        "mode": "direct",
        "type": "memory",
      },
      "type": "ADD",
    },
    {
      "meta": {
        "length": 3,
        "position": [
          212,
          215,
        ],
        "start": 8211,
      },
      "opSize": "word",
      "out": {
        "address": 4098,
        "mode": "direct",
        "type": "memory",
      },
      "type": "DEC",
    },
    {
      "jumpTo": 8207,
      "meta": {
        "length": 3,
        "position": [
          229,
          232,
        ],
        "start": 8214,
      },
      "type": "JNZ",
    },
    {
      "meta": {
        "length": 4,
        "position": [
          250,
          253,
        ],
        "start": 8217,
      },
      "opSize": "word",
      "out": {
        "address": 4100,
        "mode": "direct",
        "type": "memory",
      },
      "src": {
        "register": "AX",
        "type": "register",
      },
      "type": "MOV",
    },
    {
      "meta": {
        "length": 1,
        "position": [
          273,
          276,
        ],
        "start": 8221,
      },
      "type": "HLT",
    },
  ],
  "success": true,
}
`;

exports[`Fixtures > should match snapshot of parcial.asm 1`] = `
{
  "codeMemory": Set {
    12288,
    12289,
    12290,
    12291,
    12292,
    12293,
    12294,
    12295,
    12296,
    12297,
    12298,
    12299,
    12300,
    12301,
    12302,
    12303,
    12304,
    12305,
    12306,
    12307,
    12308,
    12309,
    12310,
    12311,
    12312,
    12313,
    12314,
    12315,
    12316,
    12317,
    12318,
    12319,
    12320,
    12321,
    12322,
    12323,
    12324,
    12325,
    12326,
    12327,
    12328,
    12329,
    12330,
    12331,
    12332,
    12333,
    12334,
    12335,
    12336,
    12337,
    12338,
    12339,
    12340,
    12341,
    12342,
    12343,
    12344,
    12345,
    12346,
    12347,
    12348,
    12349,
    12350,
    12351,
    8192,
    8193,
    8194,
    8195,
    8196,
    8197,
    8198,
    8199,
    8200,
    8201,
    8202,
    8203,
    8204,
    8205,
    8206,
    8207,
    8208,
    8209,
    8210,
    8211,
    8212,
    8213,
    8214,
    8215,
    8216,
    8217,
    8218,
    8219,
    8220,
    8221,
    8222,
    8223,
    8224,
    8225,
    8226,
    8227,
    8228,
    8229,
    8230,
    8231,
    8232,
    8233,
    8234,
    8235,
    8236,
    8237,
    8238,
    8239,
    8240,
    8241,
    8242,
    8243,
    8244,
    8245,
    8246,
    8247,
    8248,
    8249,
    8250,
    8251,
    8252,
    8253,
    8254,
    8255,
    8256,
    8257,
    8258,
    8259,
    8260,
    8261,
    8262,
    8263,
    8264,
    8265,
    8266,
    8267,
    8268,
    8269,
    8270,
  },
  "constants": Map {},
  "data": [
    {
      "initialValues": [
        74,
        117,
        97,
        110,
        76,
        111,
        114,
        101,
        110,
        122,
        111,
        77,
        97,
        114,
        116,
        105,
        110,
      ],
      "meta": {
        "length": 17,
        "start": 4096,
      },
      "size": "byte",
    },
    {
      "initialValues": [
        0,
      ],
      "meta": {
        "length": 1,
        "start": 4113,
      },
      "size": "byte",
    },
    {
      "initialValues": [
        65,
        69,
        73,
        79,
        85,
        97,
        101,
        105,
        111,
        117,
      ],
      "meta": {
        "length": 10,
        "start": 4114,
      },
      "size": "byte",
    },
    {
      "initialValues": [
        0,
      ],
      "meta": {
        "length": 1,
        "start": 4124,
      },
      "size": "byte",
    },
    {
      "initialValues": [
        0,
      ],
      "meta": {
        "length": 1,
        "start": 4125,
      },
      "size": "byte",
    },
  ],
  "instructions": [
    {
      "meta": {
        "length": 2,
        "position": [
          401,
          405,
        ],
        "start": 12288,
      },
      "register": "AX",
      "type": "PUSH",
    },
    {
      "meta": {
        "length": 2,
        "position": [
          428,
          432,
        ],
        "start": 12290,
      },
      "register": "BX",
      "type": "PUSH",
    },
    {
      "meta": {
        "length": 3,
        "position": [
          455,
          458,
        ],
        "start": 12292,
      },
      "opSize": "word",
      "out": {
        "register": "BX",
        "type": "register",
      },
      "src": {
        "register": "CX",
        "type": "register",
      },
      "type": "MOV",
    },
    {
      "meta": {
        "length": 2,
        "position": [
          485,
          488,
        ],
        "start": 12295,
      },
      "opSize": "byte",
      "out": {
        "register": "AL",
        "type": "register",
      },
      "src": {
        "mode": "indirect",
        "type": "memory",
      },
      "type": "MOV",
    },
    {
      "meta": {
        "length": 3,
        "position": [
          538,
          541,
        ],
        "start": 12297,
      },
      "opSize": "word",
      "out": {
        "register": "BX",
        "type": "register",
      },
      "src": {
        "register": "DX",
        "type": "register",
      },
      "type": "MOV",
    },
    {
      "meta": {
        "length": 2,
        "position": [
          568,
          571,
        ],
        "start": 12300,
      },
      "opSize": "byte",
      "out": {
        "register": "AH",
        "type": "register",
      },
      "src": {
        "mode": "indirect",
        "type": "memory",
      },
      "type": "MOV",
    },
    {
      "meta": {
        "length": 2,
        "position": [
          622,
          625,
        ],
        "start": 12302,
      },
      "opSize": "byte",
      "out": {
        "mode": "indirect",
        "type": "memory",
      },
      "src": {
        "register": "AL",
        "type": "register",
      },
      "type": "MOV",
    },
    {
      "meta": {
        "length": 3,
        "position": [
          692,
          695,
        ],
        "start": 12304,
      },
      "opSize": "word",
      "out": {
        "register": "BX",
        "type": "register",
      },
      "src": {
        "register": "CX",
        "type": "register",
      },
      "type": "MOV",
    },
    {
      "meta": {
        "length": 2,
        "position": [
          722,
          725,
        ],
        "start": 12307,
      },
      "opSize": "byte",
      "out": {
        "mode": "indirect",
        "type": "memory",
      },
      "src": {
        "register": "AH",
        "type": "register",
      },
      "type": "MOV",
    },
    {
      "meta": {
        "length": 2,
        "position": [
          793,
          796,
        ],
        "start": 12309,
      },
      "register": "BX",
      "type": "POP",
    },
    {
      "meta": {
        "length": 2,
        "position": [
          819,
          822,
        ],
        "start": 12311,
      },
      "register": "AX",
      "type": "POP",
    },
    {
      "meta": {
        "length": 1,
        "position": [
          845,
          848,
        ],
        "start": 12313,
      },
      "type": "RET",
    },
    {
      "meta": {
        "length": 2,
        "position": [
          974,
          978,
        ],
        "start": 12314,
      },
      "register": "BX",
      "type": "PUSH",
    },
    {
      "meta": {
        "length": 3,
        "position": [
          1001,
          1004,
        ],
        "start": 12316,
      },
      "opSize": "word",
      "out": {
        "register": "BX",
        "type": "register",
      },
      "src": {
        "register": "SP",
        "type": "register",
      },
      "type": "MOV",
    },
    {
      "meta": {
        "length": 4,
        "position": [
          1031,
          1034,
        ],
        "start": 12319,
      },
      "opSize": "word",
      "out": {
        "register": "BX",
        "type": "register",
      },
      "src": {
        "type": "immediate",
        "value": 4,
      },
      "type": "ADD",
    },
    {
      "meta": {
        "length": 2,
        "position": [
          1064,
          1067,
        ],
        "start": 12323,
      },
      "opSize": "byte",
      "out": {
        "register": "AL",
        "type": "register",
      },
      "src": {
        "mode": "indirect",
        "type": "memory",
      },
      "type": "MOV",
    },
    {
      "meta": {
        "length": 4,
        "position": [
          1113,
          1116,
        ],
        "start": 12325,
      },
      "opSize": "word",
      "out": {
        "register": "BX",
        "type": "register",
      },
      "src": {
        "type": "immediate",
        "value": 4113,
      },
      "type": "MOV",
    },
    {
      "meta": {
        "length": 3,
        "position": [
          1159,
          1162,
        ],
        "start": 12329,
      },
      "opSize": "byte",
      "out": {
        "register": "AH",
        "type": "register",
      },
      "src": {
        "type": "immediate",
        "value": 0,
      },
      "type": "MOV",
    },
    {
      "meta": {
        "length": 2,
        "position": [
          1190,
          1193,
        ],
        "start": 12332,
      },
      "opSize": "word",
      "out": {
        "register": "BX",
        "type": "register",
      },
      "type": "INC",
    },
    {
      "meta": {
        "length": 4,
        "position": [
          1216,
          1219,
        ],
        "start": 12334,
      },
      "opSize": "word",
      "out": {
        "register": "BX",
        "type": "register",
      },
      "src": {
        "type": "immediate",
        "value": 4124,
      },
      "type": "CMP",
    },
    {
      "jumpTo": 12349,
      "meta": {
        "length": 3,
        "position": [
          1262,
          1264,
        ],
        "start": 12338,
      },
      "type": "JZ",
    },
    {
      "meta": {
        "length": 2,
        "position": [
          1297,
          1300,
        ],
        "start": 12341,
      },
      "opSize": "byte",
      "out": {
        "register": "AL",
        "type": "register",
      },
      "src": {
        "mode": "indirect",
        "type": "memory",
      },
      "type": "CMP",
    },
    {
      "jumpTo": 12332,
      "meta": {
        "length": 3,
        "position": [
          1329,
          1332,
        ],
        "start": 12343,
      },
      "type": "JNZ",
    },
    {
      "meta": {
        "length": 3,
        "position": [
          1366,
          1369,
        ],
        "start": 12346,
      },
      "opSize": "byte",
      "out": {
        "register": "AH",
        "type": "register",
      },
      "src": {
        "type": "immediate",
        "value": 255,
      },
      "type": "MOV",
    },
    {
      "meta": {
        "length": 2,
        "position": [
          1398,
          1401,
        ],
        "start": 12349,
      },
      "register": "BX",
      "type": "POP",
    },
    {
      "meta": {
        "length": 1,
        "position": [
          1424,
          1427,
        ],
        "start": 12351,
      },
      "type": "RET",
    },
    {
      "meta": {
        "length": 4,
        "position": [
          1703,
          1706,
        ],
        "start": 8192,
      },
      "opSize": "word",
      "out": {
        "register": "CX",
        "type": "register",
      },
      "src": {
        "type": "immediate",
        "value": 4096,
      },
      "type": "MOV",
    },
    {
      "meta": {
        "length": 4,
        "position": [
          1744,
          1747,
        ],
        "start": 8196,
      },
      "opSize": "word",
      "out": {
        "register": "DX",
        "type": "register",
      },
      "src": {
        "type": "immediate",
        "value": 4112,
      },
      "type": "MOV",
    },
    {
      "meta": {
        "length": 3,
        "position": [
          1793,
          1796,
        ],
        "start": 8200,
      },
      "opSize": "word",
      "out": {
        "register": "DX",
        "type": "register",
      },
      "src": {
        "register": "CX",
        "type": "register",
      },
      "type": "CMP",
    },
    {
      "jumpTo": 8270,
      "meta": {
        "length": 3,
        "position": [
          1823,
          1825,
        ],
        "start": 8203,
      },
      "type": "JS",
    },
    {
      "meta": {
        "length": 3,
        "position": [
          1951,
          1954,
        ],
        "start": 8206,
      },
      "opSize": "word",
      "out": {
        "register": "BX",
        "type": "register",
      },
      "src": {
        "register": "CX",
        "type": "register",
      },
      "type": "MOV",
    },
    {
      "meta": {
        "length": 2,
        "position": [
          1981,
          1984,
        ],
        "start": 8209,
      },
      "opSize": "byte",
      "out": {
        "register": "AL",
        "type": "register",
      },
      "src": {
        "mode": "indirect",
        "type": "memory",
      },
      "type": "MOV",
    },
    {
      "meta": {
        "length": 3,
        "position": [
          2013,
          2016,
        ],
        "start": 8211,
      },
      "opSize": "byte",
      "out": {
        "register": "AH",
        "type": "register",
      },
      "src": {
        "type": "immediate",
        "value": 0,
      },
      "type": "MOV",
    },
    {
      "meta": {
        "length": 2,
        "position": [
          2043,
          2047,
        ],
        "start": 8214,
      },
      "register": "AX",
      "type": "PUSH",
    },
    {
      "jumpTo": 12314,
      "meta": {
        "length": 3,
        "position": [
          2070,
          2074,
        ],
        "start": 8216,
      },
      "type": "CALL",
    },
    {
      "meta": {
        "length": 3,
        "position": [
          2103,
          2106,
        ],
        "start": 8219,
      },
      "opSize": "byte",
      "out": {
        "register": "AH",
        "type": "register",
      },
      "src": {
        "type": "immediate",
        "value": 0,
      },
      "type": "CMP",
    },
    {
      "jumpTo": 8228,
      "meta": {
        "length": 3,
        "position": [
          2132,
          2134,
        ],
        "start": 8222,
      },
      "type": "JZ",
    },
    {
      "meta": {
        "length": 3,
        "position": [
          2166,
          2169,
        ],
        "start": 8225,
      },
      "opSize": "byte",
      "out": {
        "address": 4125,
        "mode": "direct",
        "type": "memory",
      },
      "type": "INC",
    },
    {
      "meta": {
        "length": 2,
        "position": [
          2206,
          2209,
        ],
        "start": 8228,
      },
      "register": "AX",
      "type": "POP",
    },
    {
      "meta": {
        "length": 3,
        "position": [
          2299,
          2302,
        ],
        "start": 8230,
      },
      "opSize": "word",
      "out": {
        "register": "DX",
        "type": "register",
      },
      "src": {
        "register": "CX",
        "type": "register",
      },
      "type": "CMP",
    },
    {
      "jumpTo": 8270,
      "meta": {
        "length": 3,
        "position": [
          2329,
          2331,
        ],
        "start": 8233,
      },
      "type": "JZ",
    },
    {
      "meta": {
        "length": 3,
        "position": [
          2457,
          2460,
        ],
        "start": 8236,
      },
      "opSize": "word",
      "out": {
        "register": "BX",
        "type": "register",
      },
      "src": {
        "register": "DX",
        "type": "register",
      },
      "type": "MOV",
    },
    {
      "meta": {
        "length": 2,
        "position": [
          2487,
          2490,
        ],
        "start": 8239,
      },
      "opSize": "byte",
      "out": {
        "register": "AL",
        "type": "register",
      },
      "src": {
        "mode": "indirect",
        "type": "memory",
      },
      "type": "MOV",
    },
    {
      "meta": {
        "length": 3,
        "position": [
          2519,
          2522,
        ],
        "start": 8241,
      },
      "opSize": "byte",
      "out": {
        "register": "AH",
        "type": "register",
      },
      "src": {
        "type": "immediate",
        "value": 0,
      },
      "type": "MOV",
    },
    {
      "meta": {
        "length": 2,
        "position": [
          2548,
          2552,
        ],
        "start": 8244,
      },
      "register": "AX",
      "type": "PUSH",
    },
    {
      "jumpTo": 12314,
      "meta": {
        "length": 3,
        "position": [
          2575,
          2579,
        ],
        "start": 8246,
      },
      "type": "CALL",
    },
    {
      "meta": {
        "length": 3,
        "position": [
          2608,
          2611,
        ],
        "start": 8249,
      },
      "opSize": "byte",
      "out": {
        "register": "AH",
        "type": "register",
      },
      "src": {
        "type": "immediate",
        "value": 0,
      },
      "type": "CMP",
    },
    {
      "jumpTo": 8258,
      "meta": {
        "length": 3,
        "position": [
          2637,
          2639,
        ],
        "start": 8252,
      },
      "type": "JZ",
    },
    {
      "meta": {
        "length": 3,
        "position": [
          2671,
          2674,
        ],
        "start": 8255,
      },
      "opSize": "byte",
      "out": {
        "address": 4125,
        "mode": "direct",
        "type": "memory",
      },
      "type": "INC",
    },
    {
      "meta": {
        "length": 2,
        "position": [
          2711,
          2714,
        ],
        "start": 8258,
      },
      "register": "AX",
      "type": "POP",
    },
    {
      "jumpTo": 12288,
      "meta": {
        "length": 3,
        "position": [
          2766,
          2770,
        ],
        "start": 8260,
      },
      "type": "CALL",
    },
    {
      "meta": {
        "length": 2,
        "position": [
          2795,
          2798,
        ],
        "start": 8263,
      },
      "opSize": "word",
      "out": {
        "register": "CX",
        "type": "register",
      },
      "type": "INC",
    },
    {
      "meta": {
        "length": 2,
        "position": [
          2821,
          2824,
        ],
        "start": 8265,
      },
      "opSize": "word",
      "out": {
        "register": "DX",
        "type": "register",
      },
      "type": "DEC",
    },
    {
      "jumpTo": 8200,
      "meta": {
        "length": 3,
        "position": [
          2847,
          2850,
        ],
        "start": 8267,
      },
      "type": "JMP",
    },
    {
      "meta": {
        "length": 1,
        "position": [
          2880,
          2883,
        ],
        "start": 8270,
      },
      "type": "HLT",
    },
  ],
  "success": true,
}
`;

exports[`Fixtures > should match snapshot of resto.asm 1`] = `
{
  "codeMemory": Set {
    12288,
    12289,
    12290,
    12291,
    12292,
    12293,
    12294,
    12295,
    12296,
    12297,
    12298,
    12299,
    12300,
    8192,
    8193,
    8194,
    8195,
    8196,
    8197,
    8198,
    8199,
    8200,
    8201,
    8202,
    8203,
  },
  "constants": Map {},
  "data": [
    {
      "initialValues": [
        255,
      ],
      "meta": {
        "length": 2,
        "start": 4096,
      },
      "size": "word",
    },
    {
      "initialValues": [
        2,
      ],
      "meta": {
        "length": 2,
        "start": 4098,
      },
      "size": "word",
    },
    {
      "initialValues": [
        null,
      ],
      "meta": {
        "length": 2,
        "start": 4100,
      },
      "size": "word",
    },
  ],
  "instructions": [
    {
      "meta": {
        "length": 3,
        "position": [
          238,
          241,
        ],
        "start": 12288,
      },
      "opSize": "word",
      "out": {
        "register": "AX",
        "type": "register",
      },
      "src": {
        "register": "BX",
        "type": "register",
      },
      "type": "CMP",
    },
    {
      "jumpTo": 12300,
      "meta": {
        "length": 3,
        "position": [
          259,
          261,
        ],
        "start": 12291,
      },
      "type": "JS",
    },
    {
      "meta": {
        "length": 3,
        "position": [
          282,
          285,
        ],
        "start": 12294,
      },
      "opSize": "word",
      "out": {
        "register": "AX",
        "type": "register",
      },
      "src": {
        "register": "BX",
        "type": "register",
      },
      "type": "SUB",
    },
    {
      "jumpTo": 12288,
      "meta": {
        "length": 3,
        "position": [
          303,
          306,
        ],
        "start": 12297,
      },
      "type": "JMP",
    },
    {
      "meta": {
        "length": 1,
        "position": [
          325,
          328,
        ],
        "start": 12300,
      },
      "type": "RET",
    },
    {
      "meta": {
        "length": 4,
        "position": [
          362,
          365,
        ],
        "start": 8192,
      },
      "opSize": "word",
      "out": {
        "register": "AX",
        "type": "register",
      },
      "src": {
        "address": 4096,
        "mode": "direct",
        "type": "memory",
      },
      "type": "MOV",
    },
    {
      "meta": {
        "length": 4,
        "position": [
          383,
          386,
        ],
        "start": 8196,
      },
      "opSize": "word",
      "out": {
        "register": "BX",
        "type": "register",
      },
      "src": {
        "address": 4098,
        "mode": "direct",
        "type": "memory",
      },
      "type": "MOV",
    },
    {
      "jumpTo": 12288,
      "meta": {
        "length": 3,
        "position": [
          404,
          408,
        ],
        "start": 8200,
      },
      "type": "CALL",
    },
    {
      "meta": {
        "length": 1,
        "position": [
          426,
          429,
        ],
        "start": 8203,
      },
      "type": "HLT",
    },
  ],
  "success": true,
}
`;

exports[`Fixtures > should match snapshot of rotar.asm 1`] = `
{
  "codeMemory": Set {
    12288,
    12289,
    12290,
    12291,
    12292,
    12293,
    12294,
    12295,
    12296,
    12297,
    12298,
    12299,
    12300,
    12301,
    12302,
    12303,
    12304,
    12305,
    12306,
    12307,
    12308,
    12309,
    12310,
    12311,
    12312,
    12313,
    12314,
    8192,
    8193,
    8194,
    8195,
    8196,
    8197,
    8198,
    8199,
    8200,
    8201,
    8202,
    8203,
  },
  "constants": Map {},
  "data": [
    {
      "initialValues": [
        32933,
      ],
      "meta": {
        "length": 2,
        "start": 4096,
      },
      "size": "word",
    },
    {
      "initialValues": [
        3,
      ],
      "meta": {
        "length": 2,
        "start": 4098,
      },
      "size": "word",
    },
  ],
  "instructions": [
    {
      "meta": {
        "length": 2,
        "position": [
          200,
          203,
        ],
        "start": 12288,
      },
      "opSize": "word",
      "out": {
        "register": "CX",
        "type": "register",
      },
      "type": "DEC",
    },
    {
      "jumpTo": 12304,
      "meta": {
        "length": 3,
        "position": [
          222,
          224,
        ],
        "start": 12290,
      },
      "type": "JS",
    },
    {
      "meta": {
        "length": 3,
        "position": [
          253,
          256,
        ],
        "start": 12293,
      },
      "opSize": "word",
      "out": {
        "register": "AX",
        "type": "register",
      },
      "src": {
        "register": "AX",
        "type": "register",
      },
      "type": "ADD",
    },
    {
      "jumpTo": 12288,
      "meta": {
        "length": 3,
        "position": [
          278,
          281,
        ],
        "start": 12296,
      },
      "type": "JNC",
    },
    {
      "meta": {
        "length": 2,
        "position": [
          306,
          309,
        ],
        "start": 12299,
      },
      "opSize": "word",
      "out": {
        "register": "AX",
        "type": "register",
      },
      "type": "INC",
    },
    {
      "jumpTo": 12288,
      "meta": {
        "length": 3,
        "position": [
          328,
          331,
        ],
        "start": 12301,
      },
      "type": "JMP",
    },
    {
      "meta": {
        "length": 1,
        "position": [
          356,
          359,
        ],
        "start": 12304,
      },
      "type": "RET",
    },
    {
      "meta": {
        "length": 4,
        "position": [
          484,
          487,
        ],
        "start": 12305,
      },
      "opSize": "word",
      "out": {
        "register": "CX",
        "type": "register",
      },
      "src": {
        "type": "immediate",
        "value": 16,
      },
      "type": "SUB",
    },
    {
      "meta": {
        "length": 2,
        "position": [
          510,
          513,
        ],
        "start": 12309,
      },
      "opSize": "word",
      "out": {
        "register": "CX",
        "type": "register",
      },
      "type": "NEG",
    },
    {
      "jumpTo": 12288,
      "meta": {
        "length": 3,
        "position": [
          532,
          535,
        ],
        "start": 12311,
      },
      "type": "JMP",
    },
    {
      "meta": {
        "length": 1,
        "position": [
          560,
          563,
        ],
        "start": 12314,
      },
      "type": "RET",
    },
    {
      "meta": {
        "length": 4,
        "position": [
          577,
          580,
        ],
        "start": 8192,
      },
      "opSize": "word",
      "out": {
        "register": "AX",
        "type": "register",
      },
      "src": {
        "address": 4096,
        "mode": "direct",
        "type": "memory",
      },
      "type": "MOV",
    },
    {
      "meta": {
        "length": 4,
        "position": [
          599,
          602,
        ],
        "start": 8196,
      },
      "opSize": "word",
      "out": {
        "register": "CX",
        "type": "register",
      },
      "src": {
        "address": 4098,
        "mode": "direct",
        "type": "memory",
      },
      "type": "MOV",
    },
    {
      "jumpTo": 12305,
      "meta": {
        "length": 3,
        "position": [
          622,
          626,
        ],
        "start": 8200,
      },
      "type": "CALL",
    },
    {
      "meta": {
        "length": 1,
        "position": [
          636,
          639,
        ],
        "start": 8203,
      },
      "type": "HLT",
    },
  ],
  "success": true,
}
`;

exports[`Fixtures > should match snapshot of sumador_de_tablas.asm 1`] = `
{
  "codeMemory": Set {
    8192,
    8193,
    8194,
    8195,
    8196,
    8197,
    8198,
    8199,
    8200,
    8201,
    8202,
    8203,
    8204,
    8205,
    8206,
    8207,
    8208,
    8209,
    8210,
    8211,
    8212,
    8213,
    8214,
    8215,
    8216,
    8217,
    8218,
    8219,
    8220,
    8221,
    8222,
    8223,
    8224,
    8225,
    8226,
    8227,
    8228,
    8229,
    8230,
    8231,
    8232,
    8233,
    8234,
    8235,
    8236,
    8237,
    8238,
    8239,
    8240,
    8241,
    8242,
    8243,
    8244,
  },
  "constants": Map {
    "LEN" => 5,
  },
  "data": [
    {
      "initialValues": [
        25,
        4,
        77,
        32,
        6,
      ],
      "meta": {
        "length": 10,
        "start": 4096,
      },
      "size": "word",
    },
    {
      "initialValues": [
        4,
        89,
        32,
        55,
        1,
      ],
      "meta": {
        "length": 10,
        "start": 4106,
      },
      "size": "word",
    },
    {
      "initialValues": [
        null,
        null,
        null,
        null,
        null,
      ],
      "meta": {
        "length": 10,
        "start": 4116,
      },
      "size": "word",
    },
  ],
  "instructions": [
    {
      "meta": {
        "length": 4,
        "position": [
          173,
          176,
        ],
        "start": 8192,
      },
      "opSize": "word",
      "out": {
        "register": "CX",
        "type": "register",
      },
      "src": {
        "type": "immediate",
        "value": 5,
      },
      "type": "MOV",
    },
    {
      "meta": {
        "length": 4,
        "position": [
          210,
          213,
        ],
        "start": 8196,
      },
      "opSize": "word",
      "out": {
        "register": "CX",
        "type": "register",
      },
      "src": {
        "type": "immediate",
        "value": 5,
      },
      "type": "ADD",
    },
    {
      "meta": {
        "length": 4,
        "position": [
          233,
          236,
        ],
        "start": 8200,
      },
      "opSize": "word",
      "out": {
        "register": "CX",
        "type": "register",
      },
      "src": {
        "type": "immediate",
        "value": 2,
      },
      "type": "SUB",
    },
    {
      "jumpTo": 8244,
      "meta": {
        "length": 3,
        "position": [
          254,
          256,
        ],
        "start": 8204,
      },
      "type": "JS",
    },
    {
      "jumpTo": 8244,
      "meta": {
        "length": 3,
        "position": [
          272,
          274,
        ],
        "start": 8207,
      },
      "type": "JZ",
    },
    {
      "meta": {
        "length": 4,
        "position": [
          290,
          293,
        ],
        "start": 8210,
      },
      "opSize": "word",
      "out": {
        "register": "BX",
        "type": "register",
      },
      "src": {
        "type": "immediate",
        "value": 4096,
      },
      "type": "MOV",
    },
    {
      "meta": {
        "length": 3,
        "position": [
          318,
          321,
        ],
        "start": 8214,
      },
      "opSize": "word",
      "out": {
        "register": "BX",
        "type": "register",
      },
      "src": {
        "register": "CX",
        "type": "register",
      },
      "type": "ADD",
    },
    {
      "meta": {
        "length": 2,
        "position": [
          340,
          343,
        ],
        "start": 8217,
      },
      "opSize": "word",
      "out": {
        "register": "AX",
        "type": "register",
      },
      "src": {
        "mode": "indirect",
        "type": "memory",
      },
      "type": "MOV",
    },
    {
      "meta": {
        "length": 4,
        "position": [
          364,
          367,
        ],
        "start": 8219,
      },
      "opSize": "word",
      "out": {
        "register": "BX",
        "type": "register",
      },
      "src": {
        "type": "immediate",
        "value": 4106,
      },
      "type": "MOV",
    },
    {
      "meta": {
        "length": 3,
        "position": [
          392,
          395,
        ],
        "start": 8223,
      },
      "opSize": "word",
      "out": {
        "register": "BX",
        "type": "register",
      },
      "src": {
        "register": "CX",
        "type": "register",
      },
      "type": "ADD",
    },
    {
      "meta": {
        "length": 2,
        "position": [
          414,
          417,
        ],
        "start": 8226,
      },
      "opSize": "word",
      "out": {
        "register": "AX",
        "type": "register",
      },
      "src": {
        "mode": "indirect",
        "type": "memory",
      },
      "type": "ADD",
    },
    {
      "meta": {
        "length": 4,
        "position": [
          438,
          441,
        ],
        "start": 8228,
      },
      "opSize": "word",
      "out": {
        "register": "BX",
        "type": "register",
      },
      "src": {
        "type": "immediate",
        "value": 4116,
      },
      "type": "MOV",
    },
    {
      "meta": {
        "length": 3,
        "position": [
          468,
          471,
        ],
        "start": 8232,
      },
      "opSize": "word",
      "out": {
        "register": "BX",
        "type": "register",
      },
      "src": {
        "register": "CX",
        "type": "register",
      },
      "type": "ADD",
    },
    {
      "meta": {
        "length": 2,
        "position": [
          490,
          493,
        ],
        "start": 8235,
      },
      "opSize": "word",
      "out": {
        "mode": "indirect",
        "type": "memory",
      },
      "src": {
        "register": "AX",
        "type": "register",
      },
      "type": "MOV",
    },
    {
      "meta": {
        "length": 4,
        "position": [
          514,
          517,
        ],
        "start": 8237,
      },
      "opSize": "word",
      "out": {
        "register": "CX",
        "type": "register",
      },
      "src": {
        "type": "immediate",
        "value": 2,
      },
      "type": "SUB",
    },
    {
      "jumpTo": 8210,
      "meta": {
        "length": 3,
        "position": [
          535,
          538,
        ],
        "start": 8241,
      },
      "type": "JNS",
    },
    {
      "meta": {
        "length": 1,
        "position": [
          555,
          558,
        ],
        "start": 8244,
      },
      "type": "HLT",
    },
  ],
  "success": true,
}
`;

exports[`Fixtures > should match snapshot of vocales.asm 1`] = `
{
  "codeMemory": Set {
    12288,
    12289,
    12290,
    12291,
    12292,
    12293,
    12294,
    12295,
    12296,
    12297,
    12298,
    12299,
    12300,
    12301,
    12302,
    12303,
    12304,
    12305,
    12306,
    12307,
    12308,
    12309,
    12310,
    12311,
    12312,
    12313,
    12314,
    12315,
    12316,
    12317,
    12318,
    12319,
    12320,
    12321,
    12322,
    12323,
    12324,
    12325,
    12326,
    12327,
    12328,
    12329,
    12330,
    12331,
    12332,
    12333,
    12334,
    12335,
    12336,
    12337,
    12338,
    12339,
    12340,
    12341,
    12342,
    12343,
    12344,
    8192,
    8193,
    8194,
    8195,
    8196,
    8197,
    8198,
    8199,
    8200,
    8201,
    8202,
    8203,
  },
  "constants": Map {},
  "data": [
    {
      "initialValues": [
        65,
        69,
        73,
        79,
        85,
        97,
        101,
        105,
        111,
        117,
      ],
      "meta": {
        "length": 10,
        "start": 4096,
      },
      "size": "byte",
    },
    {
      "initialValues": [
        null,
      ],
      "meta": {
        "length": 1,
        "start": 4106,
      },
      "size": "byte",
    },
    {
      "initialValues": [
        80,
        105,
        114,
        117,
        108,
        101,
        116,
        97,
        46,
      ],
      "meta": {
        "length": 9,
        "start": 4107,
      },
      "size": "byte",
    },
    {
      "initialValues": [
        null,
      ],
      "meta": {
        "length": 1,
        "start": 4116,
      },
      "size": "byte",
    },
  ],
  "instructions": [
    {
      "meta": {
        "length": 4,
        "position": [
          297,
          300,
        ],
        "start": 12288,
      },
      "opSize": "word",
      "out": {
        "register": "BX",
        "type": "register",
      },
      "src": {
        "type": "immediate",
        "value": 4095,
      },
      "type": "MOV",
    },
    {
      "meta": {
        "length": 3,
        "position": [
          339,
          342,
        ],
        "start": 12292,
      },
      "opSize": "byte",
      "out": {
        "register": "AH",
        "type": "register",
      },
      "src": {
        "type": "immediate",
        "value": 0,
      },
      "type": "MOV",
    },
    {
      "meta": {
        "length": 2,
        "position": [
          366,
          369,
        ],
        "start": 12295,
      },
      "opSize": "word",
      "out": {
        "register": "BX",
        "type": "register",
      },
      "type": "INC",
    },
    {
      "meta": {
        "length": 4,
        "position": [
          388,
          391,
        ],
        "start": 12297,
      },
      "opSize": "word",
      "out": {
        "register": "BX",
        "type": "register",
      },
      "src": {
        "type": "immediate",
        "value": 4106,
      },
      "type": "CMP",
    },
    {
      "jumpTo": 12312,
      "meta": {
        "length": 3,
        "position": [
          430,
          432,
        ],
        "start": 12301,
      },
      "type": "JZ",
    },
    {
      "meta": {
        "length": 2,
        "position": [
          461,
          464,
        ],
        "start": 12304,
      },
      "opSize": "byte",
      "out": {
        "register": "AL",
        "type": "register",
      },
      "src": {
        "mode": "indirect",
        "type": "memory",
      },
      "type": "CMP",
    },
    {
      "jumpTo": 12295,
      "meta": {
        "length": 3,
        "position": [
          489,
          492,
        ],
        "start": 12306,
      },
      "type": "JNZ",
    },
    {
      "meta": {
        "length": 3,
        "position": [
          522,
          525,
        ],
        "start": 12309,
      },
      "opSize": "byte",
      "out": {
        "register": "AH",
        "type": "register",
      },
      "src": {
        "type": "immediate",
        "value": 255,
      },
      "type": "MOV",
    },
    {
      "meta": {
        "length": 1,
        "position": [
          550,
          553,
        ],
        "start": 12312,
      },
      "type": "RET",
    },
    {
      "meta": {
        "length": 4,
        "position": [
          735,
          738,
        ],
        "start": 12313,
      },
      "opSize": "word",
      "out": {
        "register": "DX",
        "type": "register",
      },
      "src": {
        "type": "immediate",
        "value": 0,
      },
      "type": "MOV",
    },
    {
      "meta": {
        "length": 2,
        "position": [
          764,
          767,
        ],
        "start": 12317,
      },
      "opSize": "word",
      "out": {
        "register": "CX",
        "type": "register",
      },
      "type": "DEC",
    },
    {
      "jumpTo": 12344,
      "meta": {
        "length": 3,
        "position": [
          790,
          792,
        ],
        "start": 12319,
      },
      "type": "JS",
    },
    {
      "meta": {
        "length": 2,
        "position": [
          829,
          832,
        ],
        "start": 12322,
      },
      "opSize": "byte",
      "out": {
        "register": "AL",
        "type": "register",
      },
      "src": {
        "mode": "indirect",
        "type": "memory",
      },
      "type": "MOV",
    },
    {
      "meta": {
        "length": 2,
        "position": [
          860,
          864,
        ],
        "start": 12324,
      },
      "register": "BX",
      "type": "PUSH",
    },
    {
      "jumpTo": 12288,
      "meta": {
        "length": 3,
        "position": [
          887,
          891,
        ],
        "start": 12326,
      },
      "type": "CALL",
    },
    {
      "meta": {
        "length": 2,
        "position": [
          920,
          923,
        ],
        "start": 12329,
      },
      "register": "BX",
      "type": "POP",
    },
    {
      "meta": {
        "length": 2,
        "position": [
          946,
          949,
        ],
        "start": 12331,
      },
      "opSize": "word",
      "out": {
        "register": "BX",
        "type": "register",
      },
      "type": "INC",
    },
    {
      "meta": {
        "length": 3,
        "position": [
          972,
          975,
        ],
        "start": 12333,
      },
      "opSize": "byte",
      "out": {
        "register": "AH",
        "type": "register",
      },
      "src": {
        "type": "immediate",
        "value": 0,
      },
      "type": "CMP",
    },
    {
      "jumpTo": 12317,
      "meta": {
        "length": 3,
        "position": [
          1000,
          1002,
        ],
        "start": 12336,
      },
      "type": "JZ",
    },
    {
      "meta": {
        "length": 2,
        "position": [
          1040,
          1043,
        ],
        "start": 12339,
      },
      "opSize": "word",
      "out": {
        "register": "DX",
        "type": "register",
      },
      "type": "INC",
    },
    {
      "jumpTo": 12317,
      "meta": {
        "length": 3,
        "position": [
          1066,
          1069,
        ],
        "start": 12341,
      },
      "type": "JMP",
    },
    {
      "meta": {
        "length": 1,
        "position": [
          1107,
          1110,
        ],
        "start": 12344,
      },
      "type": "RET",
    },
    {
      "meta": {
        "length": 4,
        "position": [
          1152,
          1155,
        ],
        "start": 8192,
      },
      "opSize": "word",
      "out": {
        "register": "BX",
        "type": "register",
      },
      "src": {
        "type": "immediate",
        "value": 4107,
      },
      "type": "MOV",
    },
    {
      "meta": {
        "length": 4,
        "position": [
          1188,
          1191,
        ],
        "start": 8196,
      },
      "opSize": "word",
      "out": {
        "register": "CX",
        "type": "register",
      },
      "src": {
        "type": "immediate",
        "value": 9,
      },
      "type": "MOV",
    },
    {
      "jumpTo": 12313,
      "meta": {
        "length": 3,
        "position": [
          1243,
          1247,
        ],
        "start": 8200,
      },
      "type": "CALL",
    },
    {
      "meta": {
        "length": 1,
        "position": [
          1276,
          1279,
        ],
        "start": 8203,
      },
      "type": "HLT",
    },
  ],
  "success": true,
}
`;
